latest changes. in working state

--- a/nginx/stream.d/mongodb.conf
+++ b/nginx/stream.d/mongodb.conf
@@ -1,10 +1,19 @@
 stream {
     upstream mongodb_servers {
         server mongodb:27017;
+        
+        # Connection pooling settings
+        zone mongodb_pool 64k;
     }
 
     server {
         listen 27017;
+        server_name my-mongodb.uz;
+        
+        proxy_connect_timeout 5s;
+        proxy_timeout 60s;
+        proxy_socket_keepalive on;
+        
         proxy_pass mongodb_servers;
     }
-} 
+}
