--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -6,13 +6,20 @@ http {
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
+    log_format detailed '$remote_addr - $remote_user [$time_local] '
+                    '"$request" $status $body_bytes_sent '
+                    '"$http_referer" "$http_user_agent" '
+                    '$request_time $upstream_response_time';
+
     access_log /var/log/nginx/access.log main;
 
     upstream app_servers {
-        least_conn;
-        server app1:3000 max_fails=3 fail_timeout=30s;
-        server app2:3000 max_fails=3 fail_timeout=30s;
+        server app1:3000 weight=3 max_fails=3 fail_timeout=30s;
+        server app2:3000 weight=2 max_fails=3 fail_timeout=30s;
+        keepalive 32;
     }
+
+    limit_req_zone $binary_remote_addr zone=one:10m rate=30r/s;
 
     server {
         listen 80;
@@ -24,10 +31,27 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+
+        limit_req zone=one burst=20 delay=5;
+        
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-XSS-Protection "1; mode=block";
+        add_header X-Content-Type-Options "nosniff";
+        
+        location /nginx_status {
+            stub_status on;
+            access_log off;
+            allow all;
+        }
     }
+
+    keepalive_timeout 65;
+    keepalive_requests 100;
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
 }
