--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,13 @@
 user nginx;
 worker_processes auto;
+worker_rlimit_nofile 65535;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
 
 events {
     worker_connections 1024;
+    use epoll;
+    multi_accept on;
 }
 
 # Include HTTP and Stream configurations
