--- a/nginx/stream.d/mongodb.conf
+++ b/nginx/stream.d/mongodb.conf
@@ -1,19 +1,24 @@
 stream {
     upstream mongodb_servers {
-        server mongodb:27017;
+        server mongodb-primary:27017 weight=3;
+        server mongodb-secondary1:27017 weight=2;
+        server mongodb-secondary2:27017 weight=2;
         
         # Connection pooling settings
         zone mongodb_pool 64k;
+        least_conn;
     }
 
     server {
         listen 27017;
         server_name my-mongodb.uz;
         
-        proxy_connect_timeout 5s;
-        proxy_timeout 60s;
+        proxy_connect_timeout 10s;
+        proxy_timeout 300s;
         proxy_socket_keepalive on;
         
+        # Add these for better MongoDB protocol handling
+        proxy_buffer_size 64k;
         proxy_pass mongodb_servers;
     }
 }
